<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cameraFragment"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/nav_camera" />
    <item
        android:id="@+id/galleryFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_gallery" />
    <item
        android:id="@+id/colorPickerFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_picker" />
    <item
        android:id="@+id/colorSlotsFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_slots" />
    <item
        android:id="@+id/savedColorsFragment"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_saved" />
</menu>
